<resources>
    <string name="app_name">VegProject</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="slogan">Eat Healthy,\nBuy Healthy</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>