<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".SignUp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/vegfruit" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        android:id="@+id/username"
        android:hint="Enter your name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textColorHint="@color/white"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        android:hint="@string/email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/emailaddress"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:drawableRight="@drawable/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        android:hint="@string/contact_number">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/mobno"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:maxLength="10"
            android:drawableEnd="@drawable/call"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        android:hint="@string/address">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/address"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:drawableEnd="@drawable/home"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        style="@style/TextInputLayout"
        app:passwordToggleEnabled="true"
        android:hint="@string/confirm_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/confirmpassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:imeOptions="actionGo"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Account? Sign In."
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:id="@+id/textsignin"
        android:layout_marginBottom="10dp"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progressbar"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custombar"
        android:visibility="gone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:id="@+id/signup"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/buttonshape"
        app:backgroundTint="@null"/>


</LinearLayout>

</ScrollView>